fix(search-banner): aligned search banner contents with the search results

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -83,6 +83,7 @@ a {
   @extend .page-padding;
   width: 100%;
   max-width: calc($pageMaxWidth + $pagePadding * 2);
+  margin: auto;
 
   @media (min-width: $lgBreakpoint) {
     max-width: calc($pageMaxWidth + $pagePaddingLg * 2);
